--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -50,11 +50,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets/Scripts/RoofSnowCleanup.cs" />
+    <Compile Include="Assets/Scripts/CameraOrbit.cs" />
     <Compile Include="Assets/Scripts/CorniceSnowSegment.cs" />
     <Compile Include="Assets/Scripts/RoofSnow.cs" />
     <Compile Include="Assets/TutorialInfo/Scripts/Readme.cs" />
     <Compile Include="Assets/Scripts/SnowClump.cs" />
     <Compile Include="Assets/Scripts/CorniceSnowManager.cs" />
+    <Compile Include="Assets/Scripts/CorniceRuntimeSnowSetup.cs" />
     <Compile Include="Assets/Scripts/CorniceHitter.cs" />
   </ItemGroup>
   <ItemGroup>
